--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  gap: 25px;
 }
 
 .image-gallery > li {
@@ -52,6 +52,7 @@ ul {
 
 .image-gallery li img {
   object-fit: cover;
+  box-shadow: 5px 10px rgb(90, 89, 89);
   width: 100%;
   height: 100%;
   vertical-align: middle;
